katars/tests/snaps/snapshots/snap_errors__try_non_opt.snap
---
source: katars/tests/snaps/errors.rs
expression: "helpers::run_error(\"let x = 42?\")"
---
Error: ? operator requires an Opt value (enum with Val/Non variants)
   ╭─[<test>:1:9]
   │
 1 │ let x = 42?
   │         ─┬─  
   │          ╰─── ? operator requires an Opt value (enum with Val/Non variants)
   │ 
   │ Help: ? only works on Opt[T] values (Val/Non)
───╯
